# Nas_Rag

./: .gitignore  CLAUDE.md  README.md  environment.lock.yml  environment.yml  pyproject.toml  requirements.lock.txt
config/: __init__.py  capability_matrix.yaml  settings.py  type_labels.py
data/corpus/: .gitkeep
data/index/: .gitkeep
data/raw/: .gitkeep
docs/: ARCHITECTURE.md  PRD.md
docs/stages/: S0.md  S1.md
eval/frozen/: .gitkeep
src/nas_rag/: __init__.py
src/nas_rag/corpus/: __init__.py  errors.py  models.py  validators.py
src/nas_rag/domain/: __init__.py  match.py  models.py
src/nas_rag/eval/: __init__.py  attribution.py  capability.py  ground_truth.py  metrics.py
src/nas_rag/index/: __init__.py
src/nas_rag/index/vector_store/: __init__.py
src/nas_rag/ingest/: __init__.py
src/nas_rag/pipelines/: __init__.py  verify_repro.py
src/nas_rag/retrieval/: __init__.py
src/nas_rag/timing/: __init__.py
tests/: conftest.py  test_ci_gates.py  test_skeleton.py  test_smoke_imports.py  test_verify_repro.py
tests/corpus/: test_errors.py  test_models.py  test_validators.py
tests/domain/: test_match.py  test_models.py
tests/eval/: test_attribution.py  test_capability.py  test_ground_truth.py  test_metrics.py
tests/fixtures/: .gitkeep  epochs.py  manifest_samples.py
